--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "gh-pages": "^1.0.0",
     "re-base": "^3.0.2",
     "react": "^15.6.0",
-    "react-dom": "^15.6.0"
+    "react-dom": "^15.6.0",
+    "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
