--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^4.1.2",
     "gh-pages": "^1.0.0",
     "re-base": "^3.0.2",
     "react": "^15.6.0",
