--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "draft-js": "^0.10.1",
     "firebase": "^4.1.2",
     "gh-pages": "^1.0.0",
     "re-base": "^3.0.2",
@@ -12,8 +11,7 @@
     "react-dom": "^15.6.1",
     "react-quill": "^1.0.0-rc.3",
     "react-router-dom": "^4.1.1",
-    "react-rte": "^0.11.0",
-    "rxjs-es": "^5.0.0-beta.12"
+    "react-rte": "^0.11.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
